third_party/blink/renderer/core/css/properties/computed_style_utils.cc
@@ -1877,7 +1877,7 @@ CSSValue* ComputedStyleUtils::AdjustSVGPaintForCurrentColor(
     const Color& current_color) {
   if (paint.type >= SVG_PAINTTYPE_URI_NONE) {
     CSSValueList* values = CSSValueList::CreateSpaceSeparated();
-    values->Append(*CSSURIValue::Create(AtomicString(paint.GetUrl())));
+    values->Append(*CSSURIValue::Create(paint.GetUrl()));
     if (paint.type == SVG_PAINTTYPE_URI_NONE)
       values->Append(*CSSIdentifierValue::Create(CSSValueNone));
     else if (paint.type == SVG_PAINTTYPE_URI_CURRENTCOLOR)
