third_party/blink/renderer/core/css/properties/longhands/clip_path_custom.cc
@@ -38,7 +38,7 @@ const CSSValue* ClipPath::CSSValueFromComputedStyleInternal(
     }
     if (operation->GetType() == ClipPathOperation::REFERENCE) {
       return CSSURIValue::Create(
-          AtomicString(ToReferenceClipPathOperation(operation)->Url()));
+          ToReferenceClipPathOperation(operation)->Url());
     }
   }
   return CSSIdentifierValue::Create(CSSValueNone);
