third_party/blink/renderer/core/style/svg_computed_style_defs.cc
@@ -47,7 +47,7 @@ bool SVGPaint::operator==(const SVGPaint& other) const {
          DataEquivalent(resource, other.resource);
 }
 
-const String& SVGPaint::GetUrl() const {
+const AtomicString& SVGPaint::GetUrl() const {
   return Resource()->Url();
 }
 
